<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/navControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/control"
        android:title="@string/control" />
    <item
        android:id="@+id/navNoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/notification"
        android:title="@string/noti" />
    <item
        android:id="@+id/navProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/person"
        android:title="@string/profile" />
</menu>