<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IntroFragment"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ptit"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/btnBackIntro"
                android:padding="10dp"
                android:src="@drawable/back"
                android:background="@android:color/transparent"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:id="@+id/intro_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/intro_start"
                    style="@style/TEXT"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/intro_feature"
                    style="@style/TEXT"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/txtIntro_feature1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:padding="5dp"
                    android:text="@string/intro_feature1"/>
                <TextView
                    android:id="@+id/txtIntro_feature2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:padding="5dp"
                    android:text="@string/intro_feature2"/>
                <TextView
                    android:id="@+id/txtIntro_feature3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:padding="5dp"
                    android:text="@string/intro_feature3"/>
                <TextView
                    android:id="@+id/txtIntro_feature4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:padding="5dp"
                    android:text="@string/intro_feature4"/>
                <TextView
                    android:id="@+id/intro_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:padding="5dp"
                    android:text="@string/intro_end"/>
            </LinearLayout>
        </ScrollView>
</LinearLayout>