<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDiaglog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/custom_bkg_dialog">

    <TextView
        android:id="@+id/txtDescDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_about"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <CheckBox
            android:id="@+id/cbLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:buttonTintMode="multiply"
            android:text="@string/light_damaged"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:id="@+id/cbSpeaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:buttonTintMode="multiply"
            android:text="@string/speaker_damaged"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:id="@+id/cbFan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:buttonTintMode="multiply"
            android:text="@string/fan_damaged"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:id="@+id/cbProjector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:buttonTintMode="multiply"
            android:text="@string/projector_damaged"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:id="@+id/cbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:buttonTintMode="multiply"
            android:text="@string/others"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:layout_marginBottom="10dp" />

        <!-- Nhập thông tin thêm nếu cần -->
        <EditText
            android:id="@+id/edtReport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:paddingStart="20dp"
            android:hint="Nhập tại đây"
            android:inputType="text"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="5dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnConfirmReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ptit"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginEnd="30dp" />

        <Button
            android:id="@+id/btnSkipReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blank"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginStart="30dp" />
    </LinearLayout>

</LinearLayout>
