<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ListRoomFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/ptit"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_device"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_going_classroom"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtCheckRoomList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_class_going_on"
        android:textSize="17sp"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycleViewList"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>