<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NotificationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/ptit"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtClearAll"
            android:text="@string/clear_all"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textColor="#FF3D00"
            android:textStyle="bold"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoNoti"
            android:text="@string/no_noti"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            style="@style/TEXT"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvNotification"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"/>
</LinearLayout>